--- a/.github/workflows/assistant.yml
+++ b/.github/workflows/assistant.yml
@@ -1,1 +1,12 @@
+name: Assistant Code Helper
+on:
+  workflow_dispatch:  # Только ручной запуск
 
+jobs:
+  assistant:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+        with:
+          token: ${{ secrets.GH_TOKEN }}
